# gpt3_test

./: CMakeLists.txt
include/: joint_imitator.h
src/: joint_imitator.cpp  main.cpp
test/joint_position_calculation/: joint_position_calculation.cc
